first completed web app

--- a/templates/Contact.html
+++ b/templates/Contact.html
@@ -3,18 +3,16 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="WILD DRUMMER">
+    <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Home</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/nicepage.css') }}" media="screen">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/Home.css') }}" media="screen">
+    <title>Contact</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/nicepage.css') }}"  media="screen">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/Contact.css') }}" media="screen">
     <script class="u-script" type="text/javascript" src="../static/jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="../static/nicepage.js" defer=""></script>
     <meta name="generator" content="Nicepage 3.30.2, nicepage.com">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
-    <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Lato:100,100i,300,300i,400,400i,700,700i,900,900i">
-    
     
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
@@ -23,10 +21,10 @@
 		"logo": "images/logo.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Home">
+    <meta property="og:title" content="Contact">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body"><header class="u-clearfix u-header u-header" id="sec-9c66"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-9c66"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="https://onebotstudio.github.io/" class="u-image u-logo u-image-1" data-image-width="642" data-image-height="665" title="onebot">
           <img src="../static/images/logo.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -58,29 +56,13 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-      </div></header>
-    <section class="u-align-center u-clearfix u-gradient u-section-1" id="carousel_bbaf">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-1">WILD DRUMMER</h1>
-        <h3 class="u-custom-font u-font-lato u-text u-text-body-alt-color u-text-2">Turn anything into your new drum kits!</h3>
-        <form action = "/display" method = "POST" enctype = "multipart/form-data">
-        <input type = "file" name = "file" class="u-active-grey-80 u-black u-border-2 u-border-active-grey-80 u-border-black u-border-hover-grey-80 u-btn u-btn-round u-button-style u-hover-grey-80 u-radius-50 u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
-        <div class="u-container-style u-group u-group-1">
-          <div class="u-container-layout">
-            <input type = "reset" class="u-border-2 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-2" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
-            <input type = "submit" class="u-border-2 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-3" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
-          </div>
-        </div>
-        </form> 
-        </div>
-      </div>
-    </section>
+      </div></header> 
     
     
-    <footer class="u-align-center u-backlink u-clearfix u-footer u-grey-80 u-footer" id="sec-5f55">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Wild Drummer web app is powered by
-          <a class="u-link" href="https://www.heroku.com/" target="_blank">Heroku</a></p>
+    <footer class="u-align-center u-backlink u-clearfix u-footer u-grey-80 u-footer" id="sec-5f55"><div class="u-clearfix u-sheet u-sheet-1">
+        <p class="u-small-text u-text u-text-variant u-text-1">Hello there, we are
+          <a class="u-link" href="https://onebotstudio.github.io/" target="_blank">OneBotStudio</a>
+        </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
