--- a/static/css/content.css
+++ b/static/css/content.css
@@ -2,6 +2,17 @@
   background-image: linear-gradient(-45deg, #478ac9, #db545a);
 }
 
+.u-section-1 .u-text-2 {
+  letter-spacing: 0px;
+  line-height: 1.4;
+  width: 714px;
+  font-size: 1.5rem;
+  font-family: Lato, sans-serif;
+  font-weight: 400;
+  text-transform: none;
+  margin: 32px auto 0;
+}
+
 .u-section-1 .u-sheet-1 {
   min-height: 100vh;
 }
