--- a/templates/content.html
+++ b/templates/content.html
@@ -8,7 +8,7 @@
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>content</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/nicepage.css') }}" media="screen">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/content.css') }}" media="screen">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/content.css') }}" media="screen">
     <script class="u-script" type="text/javascript" src="../static/jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="../static/nicepage.js" defer=""></script>
     <meta name="generator" content="Nicepage 3.30.2, nicepage.com">
@@ -40,8 +40,8 @@
           </div>
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="{{ url_for( 'upload_file') }}"  style="padding: 10px 20px;">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="About.html" style="padding: 10px 20px;">About</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Contact.html" style="padding: 10px 20px;">Contact</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="{{ url_for( 'about') }}" style="padding: 10px 20px;">About</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="{{ url_for( 'contact') }}" style="padding: 10px 20px;">Contact</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -60,39 +60,37 @@
       </div></header>
     <section class="u-align-center u-clearfix u-gradient u-section-1" id="carousel_2dac">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h3 class="u-custom-font u-font-lato u-text u-text-body-alt-color u-text-2"> Make everything into your new drum kits!</h3>
+        <h3 class="u-custom-font u-font-lato u-text u-text-body-alt-color u-text-2">Turn anything into your new drum kits!</h3>
         <div class="u-align-center u-shape-1">
         <audio controls>
           <source src="{{content}}">
         </audio>
         </div>
-        <div class="u-form u-form-1">
-          <form action="/output" method="POST" class="u-clearfix u-form-horizontal u-form-spacing-10 u-inner-form" style="padding: 10px" source="custom" name="form">
-            <div class="u-form-group u-form-name u-form-group-1">
+        <div class="u-align-center u-form u-form-1">
+          <form action="/output" method="POST" enctype="multipart/form-data" class="u-clearfix u-inner-form u-form-spacing-10" style="padding: 10px">
+            <div class="u-container-layout u-clearfix u-form-horizontal u-form-spacing-10 u-inner-form">
               <label for="name-91da" class="u-form-control-hidden u-label u-label-1">BPM</label>
               <input type="number" min="30" max="300" id='bpm' name="bpm" placeholder='BPM' class="u-border-2 u-border-white u-input u-input-rectangle u-radius-50 u-white" required="" maxlength="200">
-            </div>
-            <div class="u-form-email u-form-group u-form-group-2">
-              <label for="email-2555" class="u-form-control-hidden u-label u-label-2">Meter</label>
+              <label for="email-2555" placeholder='Meter' class="u-form-control-hidden u-label u-label-2">Meter</label>
               <select name="meter" id="meter" class="u-border-2 u-border-white u-input u-input-rectangle u-radius-50 u-white" required="">
                 <option value="4">4</option>
                 <option value="3">3</option>
               </select>
+              <div class="u-align-left u-form-group u-form-submit">
+                <input type="submit" value="Drum it!" class="u-active-grey-80 u-black u-border-2 u-border-active-grey-80 u-border-black u-border-hover-grey-80 u-btn u-btn-round u-btn-submit u-button-style u-hover-grey-80 u-radius-50 u-btn-1">
+              </div>
             </div>
-           
-            <div class="u-align-left u-form-group u-form-submit">
-              <input type="submit" value="Drum it!" href="{{ url_for( 'generate_file') }}" class="u-active-grey-80 u-black u-border-2 u-border-active-grey-80 u-border-black u-border-hover-grey-80 u-btn u-btn-round u-btn-submit u-button-style u-hover-grey-80 u-radius-50 u-btn-1">
-
-            </div>
-         </form>
+          </form>
         </div>
         <a href="{{ url_for('upload_file') }}" class="u-align-center u-border-2 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-2">go back</a>
       </div>
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-5f55"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Wild Drummer project is licensed under the terms of the Apache-2.0 License.</p>
+    <footer class="u-align-center u-backlink u-clearfix u-footer u-grey-80 u-footer" id="sec-5f55">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <p class="u-small-text u-text u-text-variant u-text-1">Wild Drummer web app is powered by
+          <a class="u-link" href="https://www.heroku.com/" target="_blank">Heroku</a></p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/html-templates" target="_blank">
