--- a/templates/output.html
+++ b/templates/output.html
@@ -1,17 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <meta name="keywords" content="">
+  <meta name="description" content="">
+  <meta name="page_type" content="np-template-header-footer-from-plugin">
+  <title>content</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/nicepage.css') }}" media="screen">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/content.css') }}" media="screen">
+  <script class="u-script" type="text/javascript" src="../static/jquery.js" defer=""></script>
+  <script class="u-script" type="text/javascript" src="../static/nicepage.js" defer=""></script>
+  <meta name="generator" content="Nicepage 3.30.2, nicepage.com">
+  <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
+  
+  <script type="application/ld+json">{
+  "@context": "http://schema.org",
+  "@type": "Organization",
+  "name": "",
+  "logo": "images/logo.png"
+}</script>
+  <meta name="theme-color" content="#478ac9">
+  <meta property="og:title" content="content">
+  <meta property="og:type" content="website">
 </head>
-<body>
-    <h2>Your beats </h2>
+<body data-home-page="Home.html" data-home-page-title="Home" class="u-body"><header class="u-clearfix u-header u-header" id="sec-9c66"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <a href="https://onebotstudio.github.io/" class="u-image u-logo u-image-1" data-image-width="642" data-image-height="665" title="onebot">
+    <img src="../static/images/logo.png" class="u-logo-image u-logo-image-1">
+  </a>
+  <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
+    <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
+      <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
+        <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
+        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><symbol id="menu-hamburger" viewBox="0 0 16 16" style="width: 16px; height: 16px;"><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
+      </symbol>
+      </defs></svg>
+      </a>
+    </div>
+    <div class="u-custom-menu u-nav-container">
+      <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="{{ url_for( 'upload_file') }}"  style="padding: 10px 20px;">Home</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="{{ url_for( 'about') }}" style="padding: 10px 20px;">About</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="{{ url_for( 'contact') }}" style="padding: 10px 20px;">Contact</a>
+</li></ul>
+    </div>
+    <div class="u-custom-menu u-nav-container-collapse">
+      <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
+        <div class="u-inner-container-layout u-sidenav-overflow">
+          <div class="u-menu-close"></div>
+          <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html" style="padding: 10px 20px;">Home</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html" style="padding: 10px 20px;">About</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html" style="padding: 10px 20px;">Contact</a>
+</li></ul>
+        </div>
+      </div>
+      <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
+    </div>
+  </nav>
+</div></header>
+  <section class="u-align-center u-clearfix u-gradient u-section-1" id="carousel_2dac">
+    <h2 class="u-custom-font u-font-lato u-text u-text-body-alt-color u-text-2">Your Beats </h2>
+    <div class="u-align-center u-form u-form-1">
     <audio controls>
       <source src="{{output}}">
     </audio>
-    <br><br>
-    <a href="{{ url_for('upload_file') }}">Try anthor drum</a>
+    <a href="{{ url_for('upload_file') }}" class="u-align-center u-border-2 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-2">Try anthor drum</a>
+    </div>
+  </section>
+
+  <footer class="u-align-center u-backlink u-clearfix u-footer u-grey-80 u-footer" id="sec-5f55">
+    <div class="u-clearfix u-sheet u-sheet-1">
+      <p class="u-small-text u-text u-text-variant u-text-1">Wild Drummer web app is powered by
+        <a class="u-link" href="https://www.heroku.com/" target="_blank">Heroku</a></p>
+    </div></footer>
+<section class="u-backlink u-clearfix u-grey-80">
+  <a class="u-link" href="https://nicepage.com/html-templates" target="_blank">
+    <span>HTML Template</span>
+  </a>
+  <p class="u-text">
+    <span>created with</span>
+  </p>
+  <a class="u-link" href="https://nicepage.com/wysiwyg-html-editor" target="_blank">
+    <span>Visual HTML Editor</span>
+  </a>. 
+</section>
 </body>
 </html>
