html text changed

--- a/templates/About.html
+++ b/templates/About.html
@@ -66,15 +66,10 @@
          </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templates</span>
-      </a>
       <p class="u-text">
-        <span>created with</span>
+        <span>powered by</span>
       </p>
-      <a class="u-link" href="" target="_blank">
-        <span>Website Builder Software</span>
-      </a>. 
+      <a class="u-link" href="https://www.heroku.com/" target="_blank">Heroku</a> 
     </section>
   </body>
 </html>
