--- a/templates/Contact.html
+++ b/templates/Contact.html
@@ -64,16 +64,11 @@
           <a class="u-link" href="https://onebotstudio.github.io/" target="_blank">OneBotStudio</a>
         </p>
       </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="" target="_blank">
-        <span>Website Builder Software</span>
-      </a>. 
-    </section>
+      <section class="u-backlink u-clearfix u-grey-80">
+        <p class="u-text">
+          <span>powered by</span>
+        </p>
+        <a class="u-link" href="https://www.heroku.com/" target="_blank">Heroku</a> 
+      </section>
   </body>
 </html>
