--- a/templates/Contact.html
+++ b/templates/Contact.html
@@ -60,8 +60,8 @@
     
     
     <footer class="u-align-center u-backlink u-clearfix u-footer u-grey-80 u-footer" id="sec-5f55"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Hello there, we are
-          <a class="u-link" href="https://onebotstudio.github.io/" target="_blank">OneBotStudio</a>
+        <p class="u-small-text u-text u-text-variant u-text-1">Hello there &#128075;, we are
+          <a class="u-link" href="https://onebotstudio.github.io/" target="_blank">OneBotStudio</a>!
         </p>
       </div></footer>
       <section class="u-backlink u-clearfix u-grey-80">
