--- a/templates/output.html
+++ b/templates/output.html
@@ -46,9 +46,9 @@
       <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
         <div class="u-inner-container-layout u-sidenav-overflow">
           <div class="u-menu-close"></div>
-          <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html" style="padding: 10px 20px;">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html" style="padding: 10px 20px;">About</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html" style="padding: 10px 20px;">Contact</a>
+          <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="{{ url_for( 'upload_file') }}"  style="padding: 10px 20px;">Home</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="{{ url_for( 'about') }}"  style="padding: 10px 20px;">About</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="{{ url_for( 'contact') }}" style="padding: 10px 20px;">Contact</a>
 </li></ul>
         </div>
       </div>
