--- a/templates/content.html
+++ b/templates/content.html
@@ -74,7 +74,7 @@
               <input type="number" min="30" max="300" id='bpm' name="bpm" placeholder='BPM' class="u-border-2 u-border-white u-input u-input-rectangle u-radius-50 u-white" required="" maxlength="200">
               </div>
               <div class="u-form-email u-form-group u-form-group-2">
-              <label for="email-2555" placeholder='Meter' class="u-form-control-hidden u-label u-label-2">Meter</label>
+              <label for="meter" placeholder='Meter' class="u-form-control-hidden u-label u-label-2">Meter</label>
               <select name="meter" id="meter" class="u-border-2 u-border-white u-input u-input-rectangle u-radius-50 u-white" required="">
                 <option value="4">4</option>
                 <option value="3">3</option>
