--- a/templates/index.html
+++ b/templates/index.html
@@ -64,8 +64,9 @@
         <h1 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-1">WILD DRUMMER</h1>
         <h3 class="u-custom-font u-font-lato u-text u-text-body-alt-color u-text-2">Turn anything into your new drum kits!</h3>
         <form action = "/display" method = "POST" enctype = "multipart/form-data">
-        
-        <input type = "file" name = "file" class="u-align-center u-active-grey-80 u-black u-border-2 u-border-active-grey-80 u-border-black u-border-hover-grey-80 u-btn u-btn-round u-button-style u-hover-grey-80 u-radius-50 u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
+        <div class="u-container-style u-group u-group-1">
+          <input type = "file" name = "file" class="u-align-center u-active-grey-80 u-black u-border-2 u-border-active-grey-80 u-border-black u-border-hover-grey-80 u-btn u-btn-round u-button-style u-hover-grey-80 u-radius-50 u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
+        </div>
         <div class="u-container-style u-group u-group-1">
           <div class="u-container-layout">
             <input type = "reset" class="u-border-2 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-2" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
