--- a/templates/output.html
+++ b/templates/output.html
@@ -57,7 +57,7 @@
   </nav>
 </div></header>
   <section class="u-align-center u-clearfix u-gradient u-section-1" id="carousel_2dac">
-    <h2 class="u-custom-font u-font-lato u-text u-text-body-alt-color u-text-2">Your Beats </h2>
+    <h2 class="u-custom-font u-font-lato u-text u-text-body-alt-color u-text-2">WILD DRUM BEATS</h2>
     <div class="u-align-center u-form u-form-1">
     <audio controls>
       <source src="{{output}}">
