--- a/static/css/Home.css
+++ b/static/css/Home.css
@@ -67,6 +67,7 @@
 @media (max-width: 1199px) {
   .u-section-1 .u-btn-1 {
     padding: 11px 31px 12px 29px;
+    display: inline-block;
   }
 
   .u-section-1 .u-group-1 {
