--- a/templates/content.html
+++ b/templates/content.html
@@ -59,8 +59,8 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-gradient u-section-1" id="carousel_2dac">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <h3 class="u-custom-font u-font-lato u-text u-text-body-alt-color u-text-1"> Turn anything into your new drum kits!</h3>
+      <h3 class="u-custom-font u-font-lato u-text u-text-body-alt-color u-text-1"> Turn anything into your new drum kits!</h3>
+      <div class="u-clearfix u-sheet ">
         <div class="u-align-center u-shape-1">
         <audio controls>
           <source src="{{content}}">
