styling input file and delete Home.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -64,11 +64,10 @@
         <h1 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-1">WILD DRUMMER</h1>
         <h3 class="u-custom-font u-font-lato u-text u-text-body-alt-color u-text-2">Turn anything into your new drum kits!</h3>
         <form action = "/display" method = "POST" enctype = "multipart/form-data">
-        <div class="u-align-center u-container-style u-group">
-          <label class="u-active-grey-80 u-black u-border-2 u-border-active-grey-80 u-border-black u-border-hover-grey-80 u-btn u-btn-round u-button-style u-hover-grey-80 u-radius-50 u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0">
-            Upload file
-           <input type="file" name = "file" accept="audio/*" style="visibility: hidden;"/>
-          </label>
+        <div class="file-input u-align-center">
+           <input id="file" type="file" name = "file" accept="audio/*" required="" style="visibility: hidden;"/>
+          <label for="file" class="u-black u-btn u-btn-round u-button-style u-radius-50 u-btn-1">
+            Upload sound file</label>
         </div>
         <div class="u-container-style u-group u-group-1">
           <div class="u-container-layout">
