--- a/templates/content.html
+++ b/templates/content.html
@@ -94,16 +94,16 @@
     <footer class="u-align-center u-backlink u-clearfix u-footer u-grey-80 u-footer" id="sec-5f55">
       <div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Wild Drummer web app is powered by
-          <a class="u-link" href="https://www.heroku.com/" target="_blank">Heroku</a></p>
+          <a href="https://www.heroku.com/" target="_blank">Heroku</a></p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/html-templates" target="_blank">
+      <a href="https://nicepage.com/html-templates" target="_blank">
         <span>HTML Template</span>
       </a>
       <p class="u-text">
         <span>created with</span>
       </p>
-      <a class="u-link" href="https://nicepage.com/wysiwyg-html-editor" target="_blank">
+      <a href="https://nicepage.com/wysiwyg-html-editor" target="_blank">
         <span>Visual HTML Editor</span>
       </a>. 
     </section>
