--- a/templates/About.html
+++ b/templates/About.html
@@ -59,17 +59,17 @@
       </div></header> 
     
     
-    <footer class="u-align-center u-backlink u-clearfix u-footer u-grey-80 u-footer" id="sec-5f55"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-align-center u-backlink u-clearfix u-footer u-grey-80" id="sec-5f55"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Wild Drummer is an open-source project developed by 
-          <a class="u-link" href="https://onebotstudio.github.io/" target="_blank">OneBotStudio</a>. Source code please see our
-          <a class="u-link" href="https://github.com/onebotstudio/wild-drummer" target="_blank">GitHub repo</a>.
+          <a href="https://onebotstudio.github.io/" target="_blank">OneBotStudio</a>. Source code please see our
+          <a href="https://github.com/onebotstudio/wild-drummer" target="_blank">GitHub repo</a>.
          </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <p class="u-text">
         <span>powered by</span>
       </p>
-      <a class="u-link" href="https://www.heroku.com/" target="_blank">Heroku</a> 
+      <a href="https://www.heroku.com/" target="_blank">Heroku</a> 
     </section>
   </body>
 </html>
