--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
         <h3 class="u-custom-font u-font-lato u-text u-text-body-alt-color u-text-2">Turn anything into your new drum kits!</h3>
         <form action = "/display" method = "POST" enctype = "multipart/form-data">
         <div class="file-input u-align-center">
-           <input id="file" type="file" name = "file" accept="audio/*" required="" style="visibility: hidden;"/>
+           <input id="file" type="file" name = "file" accept=".wav,.mp3" required="" style="visibility: hidden;"/>
           <label for="file" class="u-black u-btn u-btn-round u-button-style u-radius-50 u-btn-1">
             Upload sound file</label>
         </div>
@@ -84,16 +84,16 @@
     <footer class="u-align-center u-backlink u-clearfix u-footer u-grey-80 u-footer" id="sec-5f55">
       <div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Wild Drummer web app is powered by
-          <a class="u-link" href="https://www.heroku.com/" target="_blank">Heroku</a></p>
+          <a href="https://www.heroku.com/" target="_blank">Heroku</a></p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+      <a href="https://nicepage.com/website-templates" target="_blank">
         <span>Website Templates</span>
       </a>
       <p class="u-text">
         <span>created with</span>
       </p>
-      <a class="u-link" href="" target="_blank">
+      <a href="" target="_blank">
         <span>Website Builder Software</span>
       </a>. 
     </section>
