--- a/templates/index.html
+++ b/templates/index.html
@@ -95,15 +95,9 @@
           <a href="https://www.heroku.com/" target="_blank">Heroku</a></p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
-      <a href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templates</span>
-      </a>
       <p class="u-text">
-        <span>created with</span>
+        <span>This is an open-source project released under the Apache-2.0 License.</span>
       </p>
-      <a href="" target="_blank">
-        <span>Website Builder Software</span>
-      </a>. 
     </section>
   </body>
 </html>
