add m4a, footnotes changed

--- a/templates/output.html
+++ b/templates/output.html
@@ -79,15 +79,9 @@
         <a class="u-link" href="https://www.heroku.com/" target="_blank">Heroku</a></p>
     </div></footer>
 <section class="u-backlink u-clearfix u-grey-80">
-  <a class="u-link" href="https://nicepage.com/html-templates" target="_blank">
-    <span>HTML Template</span>
-  </a>
   <p class="u-text">
-    <span>created with</span>
+    <span>This is an open-source project released under the Apache-2.0 License.</span>
   </p>
-  <a class="u-link" href="https://nicepage.com/wysiwyg-html-editor" target="_blank">
-    <span>Visual HTML Editor</span>
-  </a>. 
 </section>
 </body>
 </html>
