--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,8 @@
     <meta name="theme-color" content="#ffffff">
 
     <title>Home</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/Home.css') }}" media="screen">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/nicepage.css') }}" media="screen">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/Home.css') }}" media="screen">
     <script class="u-script" type="text/javascript" src="../static/jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="../static/nicepage.js" defer=""></script>
     <meta name="generator" content="Nicepage 3.30.2, nicepage.com">
@@ -73,7 +73,7 @@
         <h3 class="u-custom-font u-font-lato u-text u-text-body-alt-color u-text-2">Turn anything into your new drum kits!</h3>
         <form action = "/display" method = "POST" enctype = "multipart/form-data">
         <div class="file-input u-align-center">
-           <input id="file" type="file" name = "file" accept=".wav,.mp3,.m4a" required="" style="visibility: hidden;"/>
+           <input id="file" type="file" name = "file" accept=".wav,.mp3" required="" style="visibility: hidden;"/>
           <label for="file" class="u-black u-btn u-btn-round u-button-style u-radius-50 u-btn-1">
             Upload sound file</label>
         </div>
